# aider-mcp-server

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  aider_mcp_server.py  example.aider.conf.yml  example.env  pyproject.toml  requirements.txt  test_client.py
src/aider_mcp/: __init__.py  server.py
src/aider_mcp/services/: __init__.py
src/aider_mcp/utils/: __init__.py
tests/: __init__.py  conftest.py  test_server.py
